Fixed the webkit right whitespace problem

--- a/web/app/themes/clyde/assets/sass/app.scss
+++ b/web/app/themes/clyde/assets/sass/app.scss
@@ -9,6 +9,7 @@ $bootstrap-sass-asset-helper: false;
    Base
    ========================================================================== */
 
+
 /* ==========================================================================
    Header
    ========================================================================== */
@@ -94,6 +95,7 @@ $offcanvas-offset: 60%;
         right: $offcanvas-offset + 15%;
     }
     .sidebar-offcanvas {
+        display: none;
         height: 100%;
         margin: 0px;
         margin-top: -1px;
